fix buttons scrollbar in faq sec

--- a/assets/less/4_sections/sec_faq.less
+++ b/assets/less/4_sections/sec_faq.less
@@ -105,7 +105,7 @@
       display: flex;
       align-items: center;
       min-height: 60px;
-      margin-right: -22px;
+      //margin-right: -22px;
       padding: 10px 40px 10px 30px;
       font-size: 18px;
       line-height: 20px;
